Fixes swimlane overlap problem.

--- a/src/ui/components/swim-lane/swimlane.scss
+++ b/src/ui/components/swim-lane/swimlane.scss
@@ -31,7 +31,7 @@
   grid-template-columns: 100px 100px 1fr;
   grid-column-gap: 1px;
   grid-row-gap: 1px; // Used for grid within a swimlane for Plan views
-  min-height: $btnStdH;
+  min-height: max-content; // Must use max-content to prevent swimlane from collapsing
   width: 100%;
 
   &__time-axis {
